# postgres-failover

./: .gitignore  Cargo.toml
discord-alerts/: Cargo.toml
discord-alerts/src/: colour.rs  error.rs  lib.rs  model.rs
promotion-agent/: Cargo.toml
promotion-agent/src/: agent.rs  config.rs  error.rs  lib.rs
promotion-agent/src/server/: auth.rs  handler.rs  mod.rs  response.rs  server.rs
status-witness/: Cargo.toml
status-witness/src/: config.rs  error.rs  lib.rs
status-witness/src/server/: auth.rs  check_handler.rs  mod.rs  response.rs  server.rs
