[package]
name = "discord-alerts"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
bytes = "1"
hostname = { version = "0.3", optional = true }
log = "0.4"

[features]
default = ["auto-hostname"]
auto-hostname = ["hostname"]