[package]
name = "promotion-agent"
version = "0.1.0"
edition = "2018"

[dependencies]
discord-alerts = { path = "../discord-alerts" }
tokio = { version = "1.2", features = ["full"] }
axum = "0.2"
hyper = { version = "0.14", features = ["http1", "http2", "server", "runtime", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
toml = "0.5"
log = "0.4"
env_logger = "0.9"
